k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-application
  labels:
    app: go-application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-application
  template:
    metadata:
      labels:
        app: go-application
    spec:
      containers:
      - name: go-application
        image: eshwarearthineni/go-application:v1
        ports:
        - containerPort: 8080
